<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registrate ahora"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:textSize="22dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_register_white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>

        </io.github.florent37.shapeofview.shapes.ArcView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_person_pin_grey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_email_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_password_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_password_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/confirmar_contrasenia"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/teal_200"
        android:layout_gravity="bottom"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>